# octo-engine

./: CMakeLists.txt
Dependencies/GLFW/include/GLFW/: glfw3.h
Sparky-core/: main.cpp
Sparky-core/src/graphics/: window.cpp  window.h
